@@ -1,0 +1,21 @@
+<configure
+   xmlns="http://namespaces.zope.org/zope"
+   i18n_domain="collective.dancing">
+
+  <!-- Add custom permissions to send, preview and manage newsletters -->
+  <permission 
+    id="dancing.SendAsNewsletter"
+    title="collective.dancing: Send as newsletter"
+    />
+
+  <permission 
+    id="dancing.PreviewNewsletter"
+    title="collective.dancing: Preview newsletter"
+    />
+
+  <permission 
+    id="dancing.ManageNewsletters"
+    title="collective.dancing: Manage newsletters"
+    />
+    
+</configure>
