@@ -4,6 +4,6 @@
     appId="collective.dancing" category="Products" condition_expr=""
     url_expr="string:${portal_url}/portal_newsletters"
     visible="True">
-  <permission>Manage portal</permission>
+  <permission>collective.dancing: Manage newsletters</permission>
  </configlet>
 </object>
